# translations

./: .cron.yml  .gitignore  .gitmodules  .taskcluster.yml  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json  docker-compose.yml
db/: README.md  models.py  sql.py  updater.py
docker/: Dockerfile
docs/: README.md  contributing.md  data.md  development.md  tracking.md  training-guide.md
experiments/: README.md
inference/: .gitignore  CMakeLists.txt
inference-rs/: 01-build-plan.md  04-finalize-plan.md  05-fx-model-architecture.md  06-memory-approach.md  07-batched-inference.md  08-perf-analysis.md  09-final-comparison.md  10-decoder-optimizations.md  Cargo.toml  PUBLISHING.md  README.md  Taskfile.yml  build-plan.md  build.rs  finalize-plan.md  follow-ups.md  fx-model-architecture.md  gemm-backends.md
inference-rs/corpora/: dev-en.enja-src.ids  dev-en.ids  dev-en.txt  dev-ja.enja-trg.ids  dev-ja.txt  frankenstein-en.blocks.txt  frankenstein-en.blocks.txt.sha256  nllb-en-fr.blocks.txt  nllb-en-fr.blocks.txt.sha256  nllb-en-fr.ids  nllb-en-fr.txt  nllb-en-fr.txt.sha256
inference-rs/crates/fxtranslate/: Cargo.toml  README.md  build.rs
inference-rs/crates/fxtranslate-cli/: Cargo.toml  README.md
inference-rs/crates/fxtranslate-cli/src/: cache.rs  cli.rs  fetch.rs  lang.rs  lib.rs  main.rs  translate.rs
inference-rs/crates/fxtranslate-cli/tests/: cli.rs  list.rs  packaging.rs  translate.rs
inference-rs/crates/fxtranslate-cli/tests/common/: mod.rs
inference-rs/crates/fxtranslate-oracle/: Cargo.toml  README.md
inference-rs/crates/fxtranslate-oracle/src/: graph.rs  lib.rs  main.rs
inference-rs/crates/fxtranslate-oracle/tests/: graph_replay.rs  int8_parity.rs  ops_parity.rs  real_trace.rs
inference-rs/crates/fxtranslate/src/: engine.rs  fetch.rs  gemm.rs  gemmology_shim.cpp  lib.rs  loader.rs  main.rs  model.rs  remote.rs  shortlist.rs  spm.rs  trace.rs  weights.rs
inference-rs/crates/fxtranslate/tests/: batched_decode.rs  batched_encode.rs  gemm_parity.rs  graph_replay.rs  int8_parity.rs  ops_parity.rs  packaging.rs  real_trace.rs  spm_oracle.rs  spm_parity.rs  translate.rs  wemb_read_row.rs
inference-rs/crates/fxtranslate/tests/common/: mod.rs
inference-rs/fxtranslate/: Cargo.toml
inference-rs/fxtranslate/src/: cache.rs  cli.rs  fetch.rs  http.rs  lib.rs  main.rs  remote.rs  translate.rs
inference-rs/fxtranslate/tests/: cli.rs  list.rs  packaging.rs  translate.rs
inference-rs/fxtranslate/tests/common/: mod.rs
inference-rs/fxtranslate/tests/fixtures/: rs-list.json  rs-models-v2.json  rs-version-gate.json  tiny.bin.zst
inference-rs/issues/: 01-docs-cleanup.md  02-parity-harness.md  03-spm-oracle.md  04-tokenizer-normalization.md  05-split-vocab-oracle.md  06-numeric-reduction-parity.md  08-plan-audit-wasm-parity.md  09-cfg-feature-instrumentation.md  10-perf-harness.md  11-dhat-report.md  12-task-translate-logging.md  13-task-release-build.md  14-rust-only-package.md  15-sentence-splitting.md  16-wemb-dequant-memory.md  17-agentic-docs-validation.md  18-gemmology-rust-port.md  19-settled-rss-allocator.md  20-read-rows-from-packed-b.md  21-activation-scratch-pool.md  22-gemm-batching-gap.md  24-x86-gemmology-backend.md  cfg-feature-instrumentation.md  fxtranslate-download-resilience.md  fxtranslate-download-resume.md  gemm-batching-gap.md  numeric-reduction-parity.md  parity-harness.md  plan-audit-wasm-parity.md  read-rows-from-packed-b.md  sentence-splitting.md  task-release-build.md  tokenizer-normalization.md  wasm-native-build.md  wemb-dequant-memory.md  x86-gemmology-backend.md
inference-rs/issues/closed/: 02-parity-harness.md  06-numeric-reduction-parity.md  09-cfg-feature-instrumentation.md  10-perf-harness.md  12-task-translate-logging.md  13-task-release-build.md  14-rust-only-package.md  fxtranslate-download-resilience.md  fxtranslate-download-resume.md  publish-script.md  read-rows-from-packed-b.md  x86-gemmology-backend.md
inference-rs/notes/: 03-follow-ups.md  07-batched-inference.md
inference-rs/scripts/: check.py  download_model.py  final_comparison.py  lint_ci.py  make_blocks.py  make_frankenstein_blocks.py  parity.py  perf.py  publish.py  release_build.py  sample_corpus.py  translate.py  translate_common.py  translate_reference.py
inference-rs/src/: compare.rs  engine.rs  gemm.rs  gemmology_shim.cpp  graph.rs  lib.rs  main.rs  model.rs  ops.rs  pool.rs  shortlist.rs  spm.rs  trace.rs  weights.rs
inference-rs/tests/: batched_decode.rs  batched_encode.rs  gemm_parity.rs  graph_replay.rs  int8_parity.rs  ops_parity.rs  real_trace.rs  spm_oracle.rs  spm_parity.rs  translate.rs
inference/src/app/: CMakeLists.txt  block_bench.cpp  translator_cli.cpp
remote_settings/: README.md  pyproject.toml
remote_settings/remote_settings/: __init__.py  client.py  gcs.py
remote_settings/remote_settings/subcommands/create/: command.py
remote_settings/remote_settings/subcommands/list/: command.py
remote_settings/remote_settings/subcommands/local_server/: README.md  command.py
remote_settings/tests/: common.py  conftest.py  gcs_fixtures.py  test_gcs.py
remote_settings/tests/attachments/base-memory/enes/: metadata.json
remote_settings/tests/attachments/base/encs/: metadata.json
remote_settings/tests/attachments/tiny/esen/: metadata.json
remote_settings/tests/attachments/tiny/inha/: metadata.json
remote_settings/tests/create/: test_create_local_server.py  test_create_mocked.py
remote_settings/tests/list/: test_list_local_server.py  test_list_mocked.py
site/: index.html  package.json  robots.txt  style.css  tsconfig.json  utils.mjs
snakemake/: Snakefile
taskcluster/: config.yml  requirements.in  requirements.txt
tests/: test_alignments.py  test_analyze.py  test_cjk.py  test_clean.py  test_command_runner.py  test_common_datasets.py  test_common_downloads.py  test_config_parsing.py  test_config_validation.py  test_continuation.py  test_corpus_analyze_parallel_sample.py  test_ctranslate2.py  test_data_importer.py  test_eval.py  test_extract_best.py  test_filters.py  (+17 more)
(+741 files in other folders)
