[package]
name = "inference-rs"
version = "0.1.0"
edition = "2021"
description = "Rust reimplementation of the Firefox Translations inference engine, validated against the C++ translator-cli."

[dependencies]
# Heap profiler, wired in only under the `dhat-heap` feature so normal builds
# carry no allocator override and no extra dependency (issue 09/11).
dhat = { version = "0.3", optional = true }
# Memory-map the model file (opt-in `--mmap`): weight tensors become views into
# the mapping instead of owned heap copies. See issues/19-settled-rss-allocator.md.
memmap2 = "0.9"
# jemalloc global allocator (`jemalloc` feature, on by default): a page-returning
# allocator. libmalloc retains freed pages, so settled RSS floats to the working-set
# high-water; jemalloc returns them, reaching the live-memory floor — measured
# ~249 -> ~146 MiB settled at ~0% throughput cost (issues/19-settled-rss-allocator.md).
# Native-only (no wasm); pulled only when the feature is on.
tikv-jemallocator = { version = "0.7", optional = true }

[features]
# The fast, production-shaped configuration is the default: the lean int8
# embeddings + output projection (`lean-embed`) run through the gemmology i8mm SIMD
# kernel (`gemmology`), and jemalloc (`jemalloc`) returns freed pages so settled RSS
# reaches the live-memory floor. ~0.96x the marian-fork throughput and the lightest
# of the three engines on memory (see 08/09/10 docs). Requires a C++17 toolchain,
# the gemmology/xsimd submodules, and jemalloc — all native aarch64-only. To build
# the portable pure-Rust scalar engine (another arch, wasm, or to A/B the kernel),
# use `--no-default-features` (optionally `--features lean-embed` for the memory win).
default = ["lean-embed", "gemmology", "jemalloc"]

# Enable dhat heap profiling: installs the dhat global allocator and writes a
# dhat JSON report. The heaviest measurement feature — it pulls the external
# `dhat` crate *and* overrides the global allocator. Off by default, and
# orthogonal to `instrumentation` (combine both for a full measurement build):
# `cargo build --features dhat-heap`.
dhat-heap = ["dep:dhat"]

# Install the jemalloc global allocator (page-returning; see the dep comment).
# On by default (part of the fast config). Opt out with `--no-default-features`
# (portable/wasm builds). Ceded to `dhat-heap` when both are on — only one
# #[global_allocator] may exist, so `main.rs` installs jemalloc only when dhat-heap
# is off. Tune page return via `_RJEM_MALLOC_CONF` (e.g. `dirty_decay_ms:0` for the
# tightest RSS at a small throughput cost).
jemalloc = ["dep:tikv-jemallocator"]

# Oracle / trace-comparison instrumentation: the reference-trace reader
# (`trace::Trace`), the tolerance comparator (`compare`), the `graph::replay`
# bisector, and the `replay`/`trace` diagnostic subcommands. Pure Rust, no extra
# crates — gating it keeps the default binary to the translate path. Off by
# default; the parity/oracle test harnesses require it
# (`cargo test --features instrumentation`, wired into `task inference-rs:test`).
# `--timing` stays in the default build: it is std-only operational telemetry,
# not oracle tooling.
instrumentation = []

# Drop the resident dequantized-f32 embedding tables: dequantize embedding rows
# on demand and run the output projection full-vocab in int8. Large load/retained
# memory win and, with `gemmology`, a throughput win too. On by default; opt out
# with `--no-default-features`. See 06-memory-approach.md §7.
lean-embed = []

# Route the shifted int8 affine (`ops::intgemm_affine`: the transformer affines,
# and the full-vocab output projection under `lean-embed`) through the vendored
# gemmology i8mm SIMD kernel instead of the scalar Rust loop. Requires a C++17
# toolchain and the gemmology/xsimd submodules; aarch64 only. Numerically
# identical to the scalar path (see tests/gemm_parity.rs). On by default; opt out
# with `--no-default-features`. See 08-perf-analysis.md.
gemmology = []

[build-dependencies]
# Compiles src/gemmology_shim.cpp, but only under the `gemmology` feature (build.rs
# early-returns otherwise). Build-only; no runtime dependency.
cc = "1"
