[package]
name = "fxtranslate"
version = "0.1.0"
edition = "2021"
description = "Batteries-included CLI for Firefox Translations models: discover, download/cache, and translate (stdin/pipe or interactive) — powered by the inference-rs engine."
license = "MPL-2.0"
# NOT PUBLISHED YET — see PUBLISHING.md. Guard against an accidental `cargo publish`.
publish = false

[[bin]]
name = "fxtranslate"
path = "src/main.rs"

[lib]
# A lib + bin split so the offline packaging tests (tests/packaging.rs) can drive
# the Remote Settings client and cache logic directly.
name = "fxtranslate"
path = "src/lib.rs"

[dependencies]
# The translation engine (default fast config: lean-embed + gemmology + jemalloc).
inference-rs = { path = ".." }
# Blocking HTTP(S) client; rustls so there's no system TLS dependency.
ureq = "2"
# Pure-Rust zstd *decoder* (attachments are zstd). No C toolchain, decode-only.
ruzstd = "0.7"
# Tiny pure-Rust JSON parser (no serde/proc-macro) for the RS records response.
tinyjson = "2"
# Platform-native cache directory (macOS ~/Library/Caches, Linux $XDG_CACHE_HOME
# or ~/.cache, Windows %LOCALAPPDATA%) for the model cache root.
dirs = "6"
# SHA-256 to verify decompressed attachments against the record's decompressedHash.
sha2 = "0.10"

[dev-dependencies]
# None: tests run offline against tests/fixtures/ via the mock Fetch in
# tests/common, so no extra crates are needed.
