[package]
name = "fxtranslate-cli"
version = "0.1.0"
edition = "2021"
description = "Batteries-included CLI for Firefox Translations models: discover, download/cache, and translate (stdin/pipe or interactive) — powered by the fxtranslate engine."
license = "MPL-2.0"
repository = "https://github.com/gregtatum/translations"
readme = "README.md"
keywords = ["translation", "machine-translation", "cli", "nlp", "firefox"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "fxtranslate"
path = "src/main.rs"

[lib]
# A lib + bin split so the offline CLI tests (tests/cli.rs, list.rs, translate.rs)
# can drive `cli::run` end to end against fakes. The lib is `fxtranslate_cli` so it
# doesn't collide with the `fxtranslate` engine crate. (Model discovery/cache now
# live in the engine — its own tests/packaging.rs covers them.)
name = "fxtranslate_cli"
path = "src/lib.rs"

[dependencies]
# The translation engine, with model management pulled in: `net` brings Remote
# Settings discovery + the verified cache + the built-in `ureq`/rustls HTTP client
# (`fxtranslate::{remote,cache,fetch,lang,loader}`) the CLI drives. The fast SIMD
# path is still opt-in via `--features fxtranslate/fast`.
fxtranslate = { version = "=0.1.0", path = "../fxtranslate", features = ["net"] }
