[package]
name = "fxtranslate"
version = "0.1.0"
edition = "2021"
description = "Rust reimplementation of the Firefox Translations inference engine, validated against the C++ translator-cli."
license = "MPL-2.0"

[lib]
name = "fxtranslate"
path = "src/lib.rs"

[dependencies]
# Memory-map the model file (feature `mmap`, on under `fast`): weight tensors
# become views into the mapping instead of owned heap copies. Optional so a
# no-mmap build (e.g. wasm, or a target where mmap doesn't pay) drops it. See
# issues/19-settled-rss-allocator.md.
memmap2 = { version = "0.9", optional = true }

# Model-management deps (features `download`/`net` below); all optional so the
# default engine stays lean. Pure-Rust, no C toolchain and — except `ureq` — no TLS.
# Tiny JSON parser for the Remote Settings records response (no serde/proc-macro).
tinyjson = { version = "2", optional = true }
# Pure-Rust zstd *decoder* (attachments are zstd); decode-only, no C toolchain.
ruzstd = { version = "0.7", optional = true }
# SHA-256 to verify decompressed attachments against the record's decompressedHash.
sha2 = { version = "0.10", optional = true }
# Platform-native cache directory (macOS/Linux/Windows) for the model cache root.
dirs = { version = "6", optional = true }
# Blocking HTTP(S) client (rustls, no system TLS) for the built-in `NetworkFetch`.
ureq = { version = "2", optional = true }

[features]
# Fast by default. `gemmology` requests the SIMD kernel; build.rs compiles it for
# the target when it can (aarch64 today, C++17 toolchain present) and otherwise
# falls back to the portable scalar kernel without failing the build — so this
# default builds and runs everywhere, just faster where a kernel is wired. The
# jemalloc/dhat allocators are a binary concern and live in the fxtranslate-oracle
# dev crate, not here.
default = ["fast"]
fast = ["lean-embed", "gemmology", "mmap"]

# Memory-map the model file rather than reading it into an owned heap buffer:
# tensors become views into the mapping (file-backed, reclaimable pages) via
# `Engine::load_mmapped`. On under `fast`; drop it (`--no-default-features` or a
# custom feature set) on targets where mmap isn't available or doesn't pay.
mmap = ["dep:memmap2"]

# Drop the resident dequantized-f32 embedding tables: dequantize embedding rows
# on demand and run the output projection full-vocab in int8. Pure Rust (portable);
# large load/retained memory win, and a throughput win with `gemmology`.
lean-embed = []

# Request the vendored gemmology SIMD kernel for the shifted int8 affine
# (`ops::intgemm_affine`) instead of the scalar Rust loop. build.rs compiles it
# only where a kernel exists (aarch64 i8mm today; see issues/24 for x86) and a
# C++17 toolchain is present, emitting `--cfg gemmology_simd`; otherwise the
# `gemm` module is a scalar-returning stub and callers use the scalar kernel.
# Numerically identical to the scalar path (see tests/gemm_parity.rs).
gemmology = []

# Force the portable scalar kernel: no SIMD, no C++ toolchain — even when
# `gemmology`/`fast` are on. An opt-out from the fast default without
# `--no-default-features` (e.g. `cargo build --features portable`), for
# reproducible/audited builds, wasm, or targets without a C++ compiler.
portable = []

# Model management: Remote Settings discovery (`remote`) + verified local cache
# (`cache`) + the bring-your-own-HTTP `Fetch` trait/plumbing (`fetch`), the
# language-tag display-name table (`lang`), and the `src→trg`→`Engine` convenience
# (`loader`). Pure-Rust deps only (no TLS, no C toolchain) — an embedder with its
# own HTTP client implements `Fetch` and reuses all of this. Off by default so a
# plain dependency (and wasm) stays lean.
download = ["dep:tinyjson", "dep:ruzstd", "dep:sha2", "dep:dirs"]

# Add the built-in `ureq`-backed `NetworkFetch` (HTTPS via rustls). Implies
# `download`. Off by default so embedders that supply their own client (Firefox,
# wasm) don't pull a TLS stack.
net = ["download", "dep:ureq"]

[build-dependencies]
# Compiles src/gemmology_shim.cpp, but only under the `gemmology` feature (build.rs
# early-returns otherwise). Build-only; no runtime dependency.
cc = "1"
